# bastion

./: README.md  index.html  package-lock.json  package.json  prepare-icons.js  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blocking.rs  lib.rs  main.rs  security.rs  server.rs  session.rs  storage.rs
src/components/: CustomDialog.tsx  PasswordModal.tsx  Sidebar.tsx  TitleBar.tsx  WarningModal.tsx
src/lib/: api.ts  utils.ts
src/pages/: Blocks.tsx  Dashboard.tsx  Home.tsx  Onboarding.tsx  Pomodoro.tsx  Sessions.tsx  Settings.tsx  Stats.tsx
src/styles/: globals.css
